--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ img {
     flex-wrap: wrap;
     
     /* debug */
-    min-height: 400px;
-    border: 1px solid black;
+    /* min-height: 400px; */
+    /* border: 1px solid black; */
 }
 
 .card {
@@ -35,9 +35,9 @@ img {
     padding: 30px;
 
     /* debug */
-    min-height: 200px;
+    /* min-height: 200px;
     background-color: blueviolet;
-    border: 1px solid blue;
+    border: 1px solid blue; */
 }
 
 .card img {
@@ -96,11 +96,23 @@ img {
     background-color: var(--verde);
 }
 
+.bg-white {
+    right: 0;
+    min-width: 50px;
+    text-align: center;
+    font-size: 2rem;
+    background-color: white;
+}
+
 
 
 /* MAIN */
 .card:hover .hidden {
     z-index: 2;
+}
+
+.heart:hover {
+    color: red;
 }
 
 .discount {
@@ -111,6 +123,20 @@ img {
     padding: 5px;
     
     color: white;
+    
+    
+    /* debug */
+    
+    /* background-color: green; */
+    border: 1px solid black;
+}
+
+.heart {
+    position: absolute;
+    top: 0;
+    margin: 30px;
+    z-index: 999;
+    padding: 5px;
     
     
     /* debug */
