--- a/css/style.css
+++ b/css/style.css
@@ -148,9 +148,13 @@ a {
     display: flex;
     align-items: center;
     background-color: #ff6900;
-
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    
     /* debug */
-    min-height: 100px;
+    /* min-height: 100px; */
 }
 .nav .container {
     width: 100%;
@@ -175,7 +179,7 @@ a {
     position: absolute;
     bottom: 50px;
     margin: 30px;
-    z-index: 999;
+    z-index: 800;
     padding: 5px;
     
     color: white;
@@ -191,7 +195,7 @@ a {
     position: absolute;
     top: 0;
     margin: 30px;
-    z-index: 999;
+    z-index: 800;
     padding: 5px;
     
     
